Fix overflow scroll issue

--- a/dad-jokes-app/src/JokeList.css
+++ b/dad-jokes-app/src/JokeList.css
@@ -47,7 +47,7 @@
   background: #fff;
   align-self: center;
   width: 70%;
-  overflow: scroll;
+  overflow-y: scroll;
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.1);
 }
 
